tests/component-macros-integration/tests/trybuild/fail_missing_lifecycle.stderr
error: expected `struct`
 --> tests/trybuild/fail_missing_lifecycle.rs:5:1
  |
5 | fn dummy() {}
  | ^^
